# chemometrics

./: .pre-commit-config.yaml  README.md  apt.txt  pyproject.toml  requirements.txt  test_notebook.ipynb
exercises/: 00_jupyter_introduction.ipynb  00_python_intro.ipynb  01_Exercise_Set_1.ipynb  02_Exercise_Set_2.ipynb  03_Exercise_Set_3.ipynb  04_Exercise_Set_4.ipynb  05_Exercise_Set_5.ipynb  06_Exercise_Set_6.ipynb  07_Exercise_Set_7.ipynb  08_Exercise_Set_8.ipynb  09_Exercise_Set_9.ipynb  10_Exercise_Set_10.ipynb  11_Exercise_Set_11.ipynb  12_Exercise_Set_12.ipynb  13_Exercise_Set_13.ipynb  14_Exercise_Set_14.ipynb  README.md  test_notebook.ipynb  tkj4175.mplstyle
exercises/Data/: budweiser.csv  data1.txt  data2.txt  data3.txt  erdinger.txt  forbes.csv  nir_msc.txt  nmr_unknown_oil.csv  penguins.csv  periodic_table.csv  rate_constant.xlsx  table2.csv  (+2 more)
exercises_2020/: 00_jupyter_introduction.ipynb  01_Exercise_Set_1.ipynb  03_Exercise_Set_3.ipynb  08_Exercise_Set_8.ipynb  09_Exercise_Set_9.ipynb  11_Exercise_Set_11.ipynb  README.md
lectures/: 03_matrices.ipynb  04_least_squares_lasso_test_train.ipynb  07_breast_cancer.ipynb  07_iris.ipynb  09_gasoline.ipynb  10_knn.ipynb  README.md  linear_equations.ipynb
solutions/: 00_python_intro.ipynb  02_Solution.ipynb  02_solutions.ipynb  03_Solution.ipynb  03_solutions.ipynb  04_Solution.ipynb  05_Solution.ipynb  06_Solution.ipynb  07_Solution.ipynb  08_Solution.ipynb  09_Solution.ipynb  10_Solution.ipynb  11_Solution.ipynb  12_Solution.ipynb  13_Solution.ipynb  14_Solution.ipynb  README.md
tools/: download_files.py
(+155 files in other folders)
