[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "tkj4175-kj8175-chemometrics"
version = "2026.1"

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = ["F", "E", "W", "I001", "UP"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.black]
line-length = 79
target-version = ["py313"]

[tool.codespell]
skip = "*.pdf,*.svg,*.png"
